findbugs mess